# paleo-hebrew-seals

./: CITATION.bib  LICENSE  MANIFEST.md  ORIGIN.md  README.md  REPRODUCE_TABLES.md  REPRODUCIBILITY.md  SYSTEM_REQUIREMENTS.md  environment.yml  pyproject.toml  requirements.txt
data/: README.md
paleo_ocr/: __init__.py  bootstrap_labels.py  dataset_manifest.py  end2end_infer.py  end_2_end_infer.py  experiment_runner.py  extract_crops.py  model_registry.py  ocr_decoder.py  ocr_metrics.py  orientation_mirror.py  paleo_labeler.py  paleo_ocr_baseline.py  predict_classify.py  predict_detect.py  style_adapt.py  synthetic_v_2_generator.py  train_classify.py  train_detect.py  visual_diagnostics.py
results/: ocr_baselines.csv  run_manifest.json  table_classifier.csv  table_detector.csv
scripts/: aggregate_ultralytics_detect_runs.sh  audit_style_sources.py  build_group_split_manifest.py  monitor_ram.sh  prepare_data_layout.py  reproduce_tables.py  run_classifier_experiments.sh  run_detector_augmentation_ablation.sh  run_detector_experiments.sh  run_parallel_classifier_backbones.sh  run_parallel_classifier_backbones_group_split.sh  run_parallel_classifier_backbones_phase0.sh  run_parallel_classifier_backbones_phase1.sh  run_parallel_classifier_backbones_phase1_group_split.sh  run_parallel_classifier_backbones_real_only_40e.sh  run_parallel_classifier_backbones_real_only_40e_group_split.sh  run_parallel_classifier_stagea_backbones.sh  run_parallel_detector_stagea_sweep.sh  run_parallel_detector_sweep.sh  run_parallel_detector_sweep_non_yolo_full.sh  verify_data_release.py  (+6 more)
(+57 files in other folders)
