[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paleo-hebrew-seals"
version = "0.1.0"
description = "Reproducibility supplement: PaleoHebrew-Seals dataset and synthetic-to-real study"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Anonymous Submission" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
detector = ["ultralytics>=8.2"]
classifier = ["timm>=1.0", "torch>=2.1", "safetensors>=0.4"]
ocr = ["tesseract>=0.1.3", "kraken>=3.1"]
stageb = ["diffusers>=0.27", "transformers>=4.40", "accelerate>=0.30", "controlnet_aux>=0.0.7"]
labeler = ["flask>=3.0"]

[tool.setuptools.packages.find]
include = ["paleo_ocr*"]
